--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.2",
