--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.16",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
     "typescript": "^5.3.3"
@@ -44,6 +45,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.9",
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^3.0.2",
