--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/src/app.js",
     "dev": "nodemon src/app.ts --exec 'ts-node' --ignore 'dist/'",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.4.4",
     "@types/express-session": "^1.17.10",
+    "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
@@ -25,6 +27,10 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.3.3"
   },
   "dependencies": {
