feat(logs): setup logs

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "chalk": "^5.3.0",
     "cloudinary": "^1.41.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
