--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "@types/axios": "^0.9.36",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "axios": "^1.7.7",
     "backend-ts": "file:",
     "bcryptjs": "^2.4.3",
@@ -55,6 +57,8 @@
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
     "rate-limiter": "^0.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "twilio": "^5.3.7"
   }
