--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cloudinary": "^1.41.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ethers": "^6.13.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.5.1",
