--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "chalk": "^5.3.0",
     "cloudinary": "^1.41.2",
     "cors": "^2.8.5",
+    "cron": "^4.3.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
