--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "axios": "^1.7.7",
     "backend-ts": "file:",
     "bcryptjs": "^2.4.3",
+    "bip32": "^5.0.0-rc.0",
+    "bitcoinjs-lib": "^6.1.7",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
     "cloudinary": "^1.41.2",
@@ -43,6 +45,7 @@
     "cron": "^4.3.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "ecpair": "^3.0.0",
     "ethers": "^6.14.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -66,6 +69,7 @@
     "rate-limiter": "^0.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "tiny-secp256k1": "^2.2.3",
     "ts-node": "^10.9.2",
     "twilio": "^5.3.7",
     "uuid": "^11.1.0"
