--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node dist/src/app.js",
     "dev": "nodemon src/app.ts --exec ts-node --ignore 'dist/'",
-    "build": "tsc",
-    "postbuild": "cpx \"src/**/*.proto\" dist/ && cpx \"src/**/*.macaroon\" dist/"
+    "build": "tsc && cpx \"src/**/*.proto\" dist/ && cpx \"src/**/*.macaroon\" dist/"
   },
   "keywords": [],
   "author": "",
