--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/axios": "^0.9.36",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
+    "@types/ws": "^8.18.1",
     "axios": "^1.7.7",
     "backend-ts": "file:",
     "bcryptjs": "^2.4.3",
@@ -74,6 +75,7 @@
     "tiny-secp256k1": "^2.2.3",
     "ts-node": "^10.9.2",
     "twilio": "^5.3.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.2"
   }
 }
