--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "@types/uuid": "^10.0.0",
     "cpx": "^1.5.0",
     "typescript": "^5.3.3"
@@ -68,7 +70,9 @@
     "otp-generator": "^4.0.1",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
+    "qrcode": "^1.5.4",
     "rate-limiter": "^0.2.0",
+    "speakeasy": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "tiny-secp256k1": "^2.2.3",
