--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.4.4",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/express-session": "^1.17.10",
+    "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
@@ -24,6 +26,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
+    "@types/pino": "^7.0.4",
     "@types/uuid": "^10.0.0",
     "cpx": "^1.5.0",
     "typescript": "^5.3.3"
@@ -53,10 +56,11 @@
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "express-fileupload": "^1.5.1",
-    "express-rate-limit": "^7.1.5",
+    "express-rate-limit": "^7.5.1",
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "ln-service": "^57.25.0",
     "mongoose": "^8.6.4",
@@ -69,6 +73,7 @@
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
     "rate-limiter": "^0.2.0",
+    "resend": "^6.1.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "tiny-secp256k1": "^2.2.3",
