--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/src/app.js",
     "dev": "nodemon src/app.ts --exec ts-node --ignore 'dist/'",
-    "build": "tsc"
+    "build": "tsc",
+    "resend:test": "ts-node scripts/resend-test.ts"
   },
   "keywords": [],
   "author": "",
@@ -59,6 +60,7 @@
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "ln-service": "^57.25.0",
     "mongoose": "^8.6.4",
@@ -72,6 +74,7 @@
     "pino-pretty": "^13.0.0",
     "qrcode": "^1.5.4",
     "rate-limiter": "^0.2.0",
+    "resend": "^6.1.2",
     "speakeasy": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
