--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node dist/src/app.js",
     "dev": "nodemon src/app.ts --exec ts-node --ignore 'dist/'",
-    "build": "tsc"
+    "build": "tsc",
+    "migrate:status": "migrate-mongo status -f migrate-mongo-config.ts",
+    "migrate:up": "migrate-mongo up -f migrate-mongo-config.ts",
+    "migrate:down": "migrate-mongo down -f migrate-mongo-config.ts",
+    "migrate:create": "migrate-mongo create"
   },
   "keywords": [],
   "author": "",
@@ -20,13 +24,15 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.19.24",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
     "@types/uuid": "^10.0.0",
     "cpx": "^1.5.0",
-    "typescript": "^5.3.3"
+    "migrate-mongo": "^12.1.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.13.3",
