--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
 		"skipLibCheck": true,
 		"typeRoots": ["./types", "./node_modules/@types"]
 	},
-	"include": ["src/**/*.ts"],
+	"include": [
+		"src/**/*.ts",
+		"migrations/**/*.ts"
+	],
 	"exclude": ["node_modules"],
 }
